syntax = "proto3";

package user;

// User message represents the Users table in the database.
message User {
  string id = 1;
  string fullname = 2;
  string bio = 3;
  string phone = 4;
  string profilePicture = 5;
  string accountId = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

// Request message for getting user information
message GetUserRequest {
  string userId = 1;
  string phone = 2;
}

// Response message for getting user information
message GetUserResponse {
  User user = 1;
}

// UserService defines the service for user-related operations
service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message Contact {
  string id = 1;
  string userId = 2;
  string contactUserId = 3;
  string createdAt = 4;
}

// Request message for getting contact information
message GetContactRequest {
  string contactId = 1;
  string userId = 2;
  string contactUserId = 3;
}

// Response message for getting contact information
message GetContactResponse {
  Contact contact = 1;
}


// Request message for deleting contact information
message DeletContactRequest {
  string contactId = 1;
  string userId = 2;
  string contactUserId = 3;
}

// Response message for deleting contact information
message DeleteContactResponse {
  bool contact = 1;
}

service ContactService {
  rpc GetContact (GetContactRequest) returns (GetUserResponse);
  rpc DeleteContact (DeletContactRequest) returns (DeleteContactResponse);
}